--- a/views/result.hbs
+++ b/views/result.hbs
@@ -8,8 +8,8 @@
 {{> navbar}}
 
 <!-- Header -->
-<header class="w3-container w3-blue w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">FORM</h1>
+<header class="w3-container w3-aqua w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">WEATHER RESULTS</h1>
   <p class="w3-xlarge">Template by w3.css</p>
 </header>
 
@@ -17,12 +17,11 @@
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird w3-center">
-      <form action="/" method="post">
-        <input name="address" type="text" placeholder="Enter address..." />
-        <p>
-          <input type="submit" value="Send" formaction="/getweather" />
-        </p>
-      </form>
+    <h5>
+      <p> Address: {{address}}            </p>
+      <p> Summary: {{summary}}            </p>
+      <p> Temparature: {{temperature}}    </p>
+    </h5>
     </div>
 
     <div class="w3-third w3-center">
